# rustlsdate

./: Cargo.toml  LICENSE  README.md
src/: main.rs
systemd/: rustlsdate-update.timer  rustlsdate.service
